--- a/src/app/nuevo-juego/nuevo-juego.component.scss
+++ b/src/app/nuevo-juego/nuevo-juego.component.scss
@@ -13,3 +13,15 @@ label{
 p{
   color: #E2DCDE;
 }
+
+.btn{
+  font-size: 0.6em;
+}
+
+.agregar-gf{
+  width: 163px;
+    height: 37px;
+    border-radius: 4%;
+    border: 1px solid white;
+    margin: 5px;
+}
