Fin del juego. Se cambiaron estilos, fondos, textos, animaciones, botones, espaciados.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,7 +6,7 @@ $fuente: "Mountains of Christmas" !important;
   font-family: $fuente;
 }
 body {
-  background-color: #de2f32;
+  background-color: #5047e4;
 }
 h1, h2{
     font-weight: bold;
