--- a/src/app/nuevo-juego/nuevo-juego.component.scss
+++ b/src/app/nuevo-juego/nuevo-juego.component.scss
@@ -1,7 +1,94 @@
+
+/*Muneñco*/
+.animacion-chao{
+  width: 100%;
+  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+}
+.plane{
+position: relative;
+-webkit-animation: float 3s infinite;
+        animation: float 3s infinite;
+}
+@-webkit-keyframes float{
+50%{
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+}
+}
+@keyframes float{
+50%{
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+}
+}
+.hand{
+-webkit-transform: rotate(10deg);
+    -ms-transform: rotate(10deg);
+        transform: rotate(10deg);
+-webkit-animation: wave 1.5s infinite;
+        animation: wave 1.5s infinite;
+-webkit-transform-origin: center;
+    -ms-transform-origin: center;
+        transform-origin: center;
+}
+.blade{
+-webkit-animation:spin 1s infinite linear;
+        animation:spin 1s infinite linear;
+-webkit-transform-origin: 50% 54%;
+    -ms-transform-origin: 50% 54%;
+        transform-origin: 50% 54%;
+}
+@-webkit-keyframes spin{
+100%{
+  -webkit-transform: rotateX(360deg);
+          transform: rotateX(360deg);
+}
+}
+@keyframes spin{
+100%{
+  -webkit-transform: rotateX(360deg);
+          transform: rotateX(360deg);
+}
+}
+@-webkit-keyframes wave{
+50%{
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+}
+@keyframes wave{
+50%{
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+}
+a{
+  color: #F40009;
+  font-family: "Poppins",sans-serif;
+  position:absolute;
+  right:20px ;
+  top:20px;
+  border:2px solid #F40009;
+  text-decoration:none;
+}
+@media screen and (min-width: 451px) {
+a{
+  font-size: 20px;
+   padding:8px 12px 8px 12px;
+}
+}
+
+@media screen and (max-width: 450px) {
+a{
+  font-size: 14px;
+   padding:5px 8px 5px 8px;
+}
+}
+
 .row{
-  width: 60vh;
-  background-color: rgba(255, 249, 240, 52%);
-  padding: 8px;
+  width: 100%;
+  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+  padding: 10px 120px 120px 120px;
 }
 h2, h3{
   text-align: center;
